# opencv-experiments

./: .gitignore  CMakeLists.txt  README.rst
src/: dense-sfm.cpp  utils.py  webcams.py
src/cam_calib/: calibrate_stereo.py  chessboard_photos.py  webcams.py
